--- a/src/index.css
+++ b/src/index.css
@@ -16,35 +16,39 @@ body {
   .status {
     margin-bottom: 10px;
   }
-  
-  .square {
-    background: #fff;
+
+  .square-box {
+    width: 32.2%;
+    height: 33%;
     border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 34px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+  }
+  
+  .square {
+    background: #fff;
+    margin: 0;
+    padding: 0;
+    border: 0;    
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;    
   }
   
   .highlightedSquare {
     background: rgb(36, 114, 150);
-    border: 1px solid #999;
+    margin: 0;
+    padding: 0;
+    border: 0;    
     float: left;
     font-size: 24px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
+    width: 100%;
+    height: 100%;  
   }
 
   .square:focus {
@@ -62,5 +66,12 @@ body {
   
   .game-info {
     margin-left: 20px;
+  }
+
+  .board {
+    display: flex;
+    flex-wrap: wrap;
+    width: 115px;
+    height: 115px;
   }
   
